fdo#60842: sw ODF import: support value-type="string" on cells:

According to ODF 1.2 part 1 19.385 office:value-type, the attributes of
table:table-cell, namely office:value-type="string" and
office:string-value="foo", should override the element content of the
cell.

Change-Id: Ic580307effb046d127c4d64a4f963f0e91b3a2d1
(cherry picked from commit 1b5839f49c07beb6fbde6c7370a5636d22f9ab77)